--- a/Study/main1-3.html
+++ b/Study/main1-3.html
@@ -8,7 +8,7 @@
     <!-- 절대 경로를 이용한 이미지 출력-->
     <img src="https://img.danawa.com/prod_img/500000/609/014/img/3014609_1.jpg?shrink=330:*&_v=20220524144914" 
         width="200" height="200"/>
-    <img src="./Study/article_21101925729403.jpg">
+    <img src="./resource/article_21101925729403.jpg"/>
 
 </body>
 </html>
