--- a/Study/index.html
+++ b/Study/index.html
@@ -13,7 +13,7 @@
     <!-- 닫는 태그가 없는 태그/ src는 소스의 약자라 경로를 작성하면 됨 -->
     <img src="https://image.ajunews.com/content/image/2021/01/04/20210104220345405664.jpg"/>
     <!-- 닫는 태그가 존재하는 태그 -->
-    <h1>푸바옹~!</h1>
+    <h1>코드를 수정했습니다.</h1>
 
     <!--블록태그는 자신의 주변에 아무도 올 수 없음(줄바꿈)-->
     <p>블록</p>
